--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,31 @@ wp-content/backups/
 sitemap.xml
 sitemap.xml.gz
 .sass-cache
+
+
+index.php
+wp-activate.php
+wp-admin/
+wp-app.php
+wp-atom.php
+wp-blog-header.php
+wp-comments-post.php
+wp-commentsrss2.php
+wp-content/languages/
+wp-content/plugins/
+wp-cron.php
+wp-feed.php
+wp-includes/
+wp-links-opml.php
+wp-load.php
+wp-login.php
+wp-mail.php
+wp-pass.php
+wp-rdf.php
+wp-register.php
+wp-rss.php
+wp-rss2.php
+wp-settings.php
+wp-signup.php
+wp-trackback.php
+xmlrpc.php
