--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ wp-content/upgrade/
 wp-content/backup-db/
 wp-content/advanced-cache.php
 wp-content/wp-cache-config.php
+wp-content/plugins/wordpress-importer
 sitemap.xml
 *.log
 wp-content/cache/
