Ignore bundled theme

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ wp-content/plugins/saml-20-single-sign-on/etc/certs/
 wp-content/plugins/saml-20-single-sign-on/etc/config/saml20-idp-remote.ini
 
 wp-content/themes/twentyfourteen
+wp-content/themes/twentyfifteen
