--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,8 @@ sitemap.xml
 sitemap.xml.gz
 .sass-cache
 
+/wp-content/themes/*/stylesheets/application.css
+/wp-content/themes/*/stylesheets/application.css.map
 
 /index.php
 /wp-activate.php
