Forced bold in body copy to display as normal weight in editor

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ wp-content/backup-db/
 wp-content/advanced-cache.php
 wp-content/wp-cache-config.php
 wp-content/plugins/wordpress-importer
+wp-content/plugins/kk-star-ratings
 sitemap.xml
 *.log
 wp-content/cache/
